@@ -6,7 +6,6 @@ requires 'Dist::Zilla::Plugin::ConfirmRelease';
 requires 'Dist::Zilla::Plugin::CopyFilesFromBuild';
 requires 'Dist::Zilla::Plugin::DistINI';
 requires 'Dist::Zilla::Plugin::ExecDir';
-requires 'Dist::Zilla::Plugin::ExtraTests';
 requires 'Dist::Zilla::Plugin::FakeRelease';
 requires 'Dist::Zilla::Plugin::GatherDir::Template';
 requires 'Dist::Zilla::Plugin::GenerateFile';
@@ -37,6 +36,7 @@ requires 'Dist::Zilla::Plugin::Prereqs::FromCPANfile';
 requires 'Dist::Zilla::Plugin::PruneCruft';
 requires 'Dist::Zilla::Plugin::ReadmeAnyFromPod';
 requires 'Dist::Zilla::Plugin::RewriteVersion';
+requires 'Dist::Zilla::Plugin::RunExtraTests';
 requires 'Dist::Zilla::Plugin::ShareDir';
 requires 'Dist::Zilla::Plugin::TemplateModule';
 requires 'Dist::Zilla::Plugin::TestRelease';
