@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use [RunExtraTests] instead of [ExtraTests]
 
 0.021     2015-11-13 13:24:55 EST
   - Add PluginRemover role to allow -remove option
